--- a/app/views/posts/partials/_shareable_link.html.erb
+++ b/app/views/posts/partials/_shareable_link.html.erb
@@ -9,7 +9,7 @@
   <div class="alert alert-info" role="alert">
     <p class="m-0 mt-2">
       You've generated a shareable link for this article!
-      You can access it here: <a href="<%= @post.slug + '/?shareable_token=' + shareable_token %>" target="_blank"><%= request.base_url + @post.slug + '?shareable_token=' + shareable_token %></a>
+      You can access it here: <a href="<%= @post.slug + '/?shareable_token=' + shareable_token %>" target="_blank"><%= request.base_url + "/" + @post.slug + '?shareable_token=' + shareable_token %></a>
       or regnerate it <%= link_to "here", {:controller => "posts", :action => "generate_shareable_token", :id => @post.id}, :data => {:confirm => "Are you sure you want to regenerate this link? The old one will no longer work."} %>. 
     </p>
   </div>
