--- a/app/assets/stylesheets/_posts_projects.css.scss
+++ b/app/assets/stylesheets/_posts_projects.css.scss
@@ -61,21 +61,23 @@
             display: flex;
             flex-direction: row;
             margin: 10px 0;
+            max-height: 100px;
+            overflow: hidden;
             img {
                 width: 130px;
-                height: 80px;
+                height: 90px;
                 object-fit: cover;
                 z-index: 1;
                 position: relative;
                 background-size: cover;
             }
             p {
-                font-size: 1em;
+                font-size: 1rem;
+                font-style: normal;
                 margin: 0;
-                margin-left: 15px;
+                margin-left: 8px;
                 line-height: 1.4 !important;
                 font-family: "Roboto Condensed Bold", sans-serif;
-                font-style: italic;
                 a {
                     color: #191919;
                     text-decoration: none;
