--- a/app/views/welcome/partials/_hero.html.erb
+++ b/app/views/welcome/partials/_hero.html.erb
@@ -3,7 +3,9 @@
     <div class="featured divfeatured">
       <div class="featured individual">
         <div class="featured_img">
-          <%=link_to(image_tag(@posts_approved_0[0].thumbnail.variant(resize_to_fill: [540,340], format: 'webp'), alt: @posts_approved_0[0].title), @posts_approved_0[0] )%>
+          <% if @posts_approved_0[0].thumbnail.attached? %>
+            <%= link_to(image_tag(@posts_approved_0[0].thumbnail.variant(resize_to_fill: [540,340], format: 'webp'), alt: @posts_approved_0[0].title), @posts_approved_0[0] )%>
+          <% end %>
         </div>
         <h3 class="article_title"><%= link_to @posts_approved_0[0].title, @posts_approved_0[0] %></h3>
         <div class="d-table-cell align-middle pt-2">
@@ -19,7 +21,9 @@
     <div class="articles2-6">
       <% @posts_approved_0[1..4].each do |post| %>
         <div class="thumbnail">
-          <%=link_to(image_tag(post.thumbnail.variant(resize_to_fill: [300,150], format: 'webp'), alt: post.title, :class => "image_thumbnail"), post )%>
+          <% if post.thumbnail.attached? %>
+            <%=link_to(image_tag(post.thumbnail.variant(resize_to_fill: [300,150], format: 'webp'), alt: post.title, :class => "image_thumbnail"), post )%>
+          <% end %>
           <div class="thumbnail--container">
             <h3 class="article_title"><%= link_to post.title.truncate_words(14), post %></h3>
             <div class="d-table-cell align-middle pt-2">
