more design fixes

--- a/app/assets/stylesheets/_newlayout.css.scss
+++ b/app/assets/stylesheets/_newlayout.css.scss
@@ -330,4 +330,8 @@
     .articles2-6 .d-table-cell {
         display: none !important;
     }
+    .thumbnail {
+        max-height: 100px;
+        overflow: hidden;
+    }
 }
