--- a/app/views/application_mailer/custom_message_template.html.erb
+++ b/app/views/application_mailer/custom_message_template.html.erb
@@ -84,7 +84,9 @@
                       <%= markdown @newsletter.message %>
                       <p>Best,<br/>
                         Mia</p>
-                      <%# <a href="javascript:void(0);"style="background:#4abeb6;text-decoration:none !important; font-weight:500; margin-top:35px; color:#fff;text-transform:uppercase; font-size:14px;padding:10px 24px;display:inline-block;border-radius:50px;">See more on Discord</a> %>
+                      <% if @newsletter.action_button.present? %>
+                        <a target="_blank" href="<%= @button_link %>"style="background:#20e277;text-decoration:none !important; font-weight:500; margin-top:35px; color:#fff;text-transform:uppercase; font-size:14px;padding:10px 24px;display:inline-block;border-radius:50px;"><%= @button_text %></a>
+                      <% end %>
                     </td>
                   </tr>
                   <tr>
