--- a/app/views/posts/_published.html.erb
+++ b/app/views/posts/_published.html.erb
@@ -70,17 +70,17 @@
             </div>
           </div>
           <% @authors = [@user] + @collabs %>
-          <div style="<% if @authors.length.eql? 1 %>height: 57px;<% else %>max-height: <%= 30 + @authors.length * 40 %>px<% end %>" class="post_info d-flex flex-wrap overflow-hidden align-items-center justify-content-between pb-2">
-            <div class="d-flex flex-wrap pt-2">
+          <div style="<% if @authors.length.eql? 1 %>height: 58px;<% else %>max-height: <%= 10 + @authors.length * 48 %>px<% end %>" class="post_info d-flex pt-2 flex-wrap overflow-hidden align-items-center justify-content-between">
+            <div class="d-flex flex-wrap">
               <% @authors.each do |author| %>
-                <div class="author d-table-cell align-middle text-nowrap">
+                <div class="author pb-2 d-table-cell align-middle text-nowrap">
                   <% @profile = author.profile.attached? ? author.profile.variant(resize_to_fill: [100,100]) : "profile_image.jpg" %>
                   <%= image_tag(@profile, :class => "profile_img") %>
-                  <p class="author_name m-0 mr-2">By <%= link_to(author.full_name, author) %></p>
+                  <p class="author_name mr-2">By <%= link_to(author.full_name, author) %></p>
                 </div>
               <% end %>
             </div>
-            <div class="pt-2">
+            <div class="pl-1 mb-2">
               <p class="date m-0">
                 <span>
                   <svg width="15px" height="15px" aria-hidden="true" focusable="false" data-prefix="fas" data-icon="eye" class="svg-inline--fa fa-eye fa-w-18" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 576 512"><path fill="currentColor" d="M572.52 241.4C518.29 135.59 410.93 64 288 64S57.68 135.64 3.48 241.41a32.35 32.35 0 0 0 0 29.19C57.71 376.41 165.07 448 288 448s230.32-71.64 284.52-177.41a32.35 32.35 0 0 0 0-29.19zM288 400a144 144 0 1 1 144-144 143.93 143.93 0 0 1-144 144zm0-240a95.31 95.31 0 0 0-25.31 3.79 47.85 47.85 0 0 1-66.9 66.9A95.78 95.78 0 1 0 288 160z"></path></svg> <%= format_large_number(@post.post_impressions) %>
