--- a/app/views/invitations/partials/home/_form.html.erb
+++ b/app/views/invitations/partials/home/_form.html.erb
@@ -9,7 +9,9 @@
     <h6 class="mt-3 text-danger"><%= pluralize(@invitation.errors.count, "error")%> prevented this invitation from sending:</h6>
     <ul>
       <% @invitation.errors.full_messages.each do |msg| %>
-      <li class="text-danger"><h6><%= msg %></h6></li>
+        <li class="text-danger">
+          <h6><%= msg %></h6>
+        </li>
       <% end %>
     </ul>
   <% end %>
@@ -26,10 +28,8 @@
   </div>
   <small>
     When you click <i>Send Invite</i>, we will send an email inviting your friend(s) to apply to The Teen Magazine. The email will include a special apply link from you that will waive the cover letter and prioritize their application for review.
-    The referral link will expire in 1 week so they must apply before then to benefit from the easier application.
   </small>
 <% end %>
-
 <script type="text/javascript">
   $(document).ready(function() {
     isFormButtonDisabled('#invitation_email');
