--- a/app/views/pitches/_interview_explanation.html.erb
+++ b/app/views/pitches/_interview_explanation.html.erb
@@ -6,12 +6,16 @@
   <ol>
     <li>Email the contact associated with the pitch. Say that you're a writer from The Teen Magazine and will be interviewing the pitched person.
       Confirm that they would still like to be interviewed.</li>
-    <li>Once confirmed, send your interviewee roughly 5-10 questions. Ask for images to use in the article if applicable. Do not assume you can 
+    <li>Once confirmed, send your interviewee roughly 5-10 questions (or organize an interview on Zoom). Ask for images to use in the article if applicable. Do not assume you can 
       use images found online unless you're embedding social media posts.
     </li>
     <li>After getting a response to the questions, give a date by when you'll have the draft done, and write your draft.</li>
     <li>Once your draft is finished, create a shareable link (instructions will be on your draft) and send it to them to look over.</li>
     <li>When you get their ok, submit the article for review.</li>
   </ol>
-  <p>Please contact me at mia@theteenmagazine.com if you need to clarify anything.</p>
+  <p>
+    Contact me at mia@theteenmagazine.com if you need to clarify anything. 
+    If you don't get a response to your emails, try sending follow up emails every 2-4 days. 
+    If you've sent three follow up emails and still haven't heard back, please let me know.
+  </p>
 </div>
