--- a/app/views/posts/partials/_recent.html.erb
+++ b/app/views/posts/partials/_recent.html.erb
@@ -1,4 +1,4 @@
-<% @trending.each do |post| %>
+<% @recent.each do |post| %>
   <div class="ctgry_article" style="margin-bottom: 18px;">
     <%= link_to(image_tag(post.thumbnail.variant(resize_to_fill: [150, 100])), post) %>
     <div class="paragraph" style="margin-top: -3px">
