added published articles and writer bio to profile

--- a/app/views/users/partials/_editor_stats.html.erb
+++ b/app/views/users/partials/_editor_stats.html.erb
@@ -1,1 +1,1 @@
-<span class="editor_status">Editor<%= @became_editor %> · <%= @editor_reviews_cnt %> edited articles · <%= @editor_pitches_cnt %> pitched topics</span>
+<span class="editor_status">Editor<%= @became_editor %> · <%= @editor_posts_cnt %> published articles · <%= @editor_reviews_cnt %> edited articles · <%= @editor_pitches_cnt %> pitched topics</span>
