added progress bar back to dashboard

--- a/app/views/badges/_new_badge_modal.html.erb
+++ b/app/views/badges/_new_badge_modal.html.erb
@@ -11,7 +11,7 @@
           <div id="modal-body-badges">
             <h2>Congratulations!</h2>
             <p>You've reached a new milestone of <b><%= @badge.level %> <%= @badge.kind %></b>! That means that you are in the top <b><%= @percentile %>%</b> of all writers at The Teen Magazine.
-              Your new badge is visible on your writer profile so you can brag to your friends and family. ;) Amazing job!</p>
+              Your new badge is visible on your writer profile so you can show your friends and family. Amazing job!</p>
           </div>
         <% end %>
       </div>
