--- a/app/views/application_mailer/editor_picks.html.erb
+++ b/app/views/application_mailer/editor_picks.html.erb
@@ -31,34 +31,32 @@
     height: auto !important;
   }
   .ctgry_section {
-    display: flex;
-    flex-direction: row;
     width: 100%;
-    flex-wrap: wrap;
-    margin: 0 auto;
-    justify-content: space-between;
-    p {
-        font-size: 16px;
-        margin-bottom: 5px;
-        color: #545454;
-    }
-    .ctgry_article {
-        width: 31%;
-        img {
-            width: 100%;
-        }
-        h1 {
-            margin: 0;
-            margin-top: 10px;
-            font-size: 26px;
-            font-family: "Lucitana";
-            font-weight: 400;
-            a {
-                color: black;
-                text-decoration: none;
-            }
-        }
-    }
+  }
+  .ctgry_article img {
+    width: 100%;
+    height: auto;
+  }
+  .ctgry_article h1 {
+    margin: 0;
+    margin-top: 10px;
+    font-size: 22px;
+    font-family: "Lucitana";
+    font-weight: 400;
+  }
+  .ctgry_article a {
+    color: black;
+    text-decoration: none;
+  }
+  .ctgry_article a:hover {
+    text-decoration: none !important;
+  }
+  .profile_img {
+      margin-right: 5px;
+      min-width: 40px !important;
+      max-width: 40px !important;
+      max-height: 40px !important;
+      border-radius: 50%;
   }
   @media only screen and (max-width: 640px) {
     .padding {
@@ -104,16 +102,16 @@
                       <span style="display:inline-block; vertical-align:middle; margin:29px 0 26px; border-bottom:1px solid #cecece; width:100px;"></span>
                     <% end %>
                     <%= markdown @newsletter.message %>
-                    <div class="ctgry_section">
-                      <% Post.published.limit(5).each do |post| %>
+                    <div style="display: flex;flex-direction: column;width: 100%;margin: 0 auto;justify-content: space-between;">
+                      <% @posts.each do |post| %>
                         <div class="ctgry_article">
-                          <%=link_to(image_tag(post.thumbnail.variant(resize_to_fill: [540,340], format: 'webp'), alt: post.title), post )%>
-                          <h1><%= link_to post.title, post %></h1>
-                          <div class="d-flex flex-wrap overflow-hidden align-items-center justify-content-between">
+                          <%=link_to(image_tag(post.thumbnail.variant(resize_to_fill: [540,340], format: 'webp'), alt: post.title, style: "width: 100%;height: auto;"), post )%>
+                          <h1 style="margin: 0;margin-top: 10px;font-size: 22px;font-family: 'Lucitana';font-weight: 400;"><%= link_to post.title, post %></h1>
+                          <div>
                             <div class="author d-table-cell align-middle">
                               <% @profile = post.user.profile.attached? ? post.user.profile.variant(resize_to_fill: [100,100]) : "profile_image.jpg" %>
-                              <%= image_tag(@profile, :class => "profile_img", :style => "max-width: 20px !important; min-width: 20px !important; height: 20px;") %>
-                              <%= link_to(post.user.full_name, post.user, class: 'date') %>
+                              <%= image_tag(@profile, :style => "margin-right: 5px;min-width: 40px !important;max-width: 40px !important;max-height: 40px !important;border-radius: 50%;") %>
+                              <%= link_to(post.user.full_name, post.user, style: 'font-size: 1rem;font-family: "Playfair Display";white-space: nowrap;') %>
                             </div>
                             <%= render 'posts/partials/views_and_comments', post: post %>
                           </div>
@@ -148,7 +146,7 @@
                   Sent to <%= @newsletter.audience %>
                 </span>
                 <span style="font-size:12px; color:rgba(69, 80, 86, 0.7411764705882353); line-height:18px; margin:0 0 0; padding-left: 4px;">-</span>
-                <a style="font-size:12px; color:rgba(69, 80, 86, 0.7411764705882353); line-height:18px; margin:0 0 0;" href="https://www.theteenmagazine.com/email-preferences?email=<%= user.email %>&id=<%= user.id %>">
+                <a style="font-size:12px; color:rgba(69, 80, 86, 0.7411764705882353); line-height:18px; margin:0 0 0;" href="https://www.theteenmagazine.com/email-preferences?email=&id=">
                   Email Preferences
                 </a>
               </td>
