--- a/app/views/newsletters/show.html.erb
+++ b/app/views/newsletters/show.html.erb
@@ -1,7 +1,7 @@
 <% if @newsletter.template.eql? "Announcement" %>
   <%= render "newsletters/previews/announcement", user: User.first %>
-<% else %>
-  <%= render "newsletters/previews/weekly_picks" %>
+<% elsif @newsletter.template.eql? "Weekly Picks" %>
+  <%= render "newsletters/previews/weekly_picks", user: User.first %>
 <% end %>
 <div class="skinny_wrapper">
   <div class="d-flex justify-content-end">
