--- a/app/views/posts/_draft.html.erb
+++ b/app/views/posts/_draft.html.erb
@@ -1,14 +1,4 @@
 <style lazyload>
-  @media(min-width: 800px) {
-    .post_image {
-      background-image: url(<%= url_for(@post.thumbnail.variant(resize_to_fill: [560, 280])) %>);
-    }
-  }
-  @media(max-width: 800px) {
-    .post_image {
-      background-image: url(<%= url_for(@post.thumbnail.variant(resize_to_fill: [150, 100])) %>);
-    }
-  }
   blockquote {
     margin: 1em 0;
     font-style: italic;
@@ -31,8 +21,10 @@
   <% else %>
     <p class="banner_stts">In Progress</p>
   <% end %>
-  <div class="post_image">
-  </div>
+  <% if @post.thumbnail.attached? %>
+    <%= image_tag(@post.thumbnail.variant(resize_to_fill: [540, 340], format: 'webp'), class: "post_image", fetchpriority: "high") %>
+  <% end %>
+</div>
 </div>
 <div class="flex_wrapper_posts mb-4">
   <div class="skinny wrapper_padding" id="post_show_content">
