--- a/app/views/posts/_published.html.erb
+++ b/app/views/posts/_published.html.erb
@@ -1,19 +1,17 @@
 <style>
-  .post_image {
-      background-image: url(<%= url_for(@post.thumbnail.variant(resize_to_fill: [540, 340], format: 'webp')) %>);
-    }
-    blockquote {
-      margin: 1em 0;
-      font-style: italic;
-    }
-    .twitter-tweet {
-      margin: 0 auto;
-      display: block;
-    }
+  blockquote {
+    margin: 1em 0;
+    font-style: italic;
+  }
+  .twitter-tweet {
+    margin: 0 auto;
+    display: block;
+  }
 </style>
 <div class="div">
-  <div class="post_image">
-  </div>
+  <% if @post.thumbnail.attached? %>
+    <%= image_tag(@post.thumbnail.variant(resize_to_fill: [540, 340], format: 'webp'), class: "post_image", fetchpriority: "high") %>
+  <% end %>
 </div>
 <div class="flex_wrapper_posts mb-4">
   <div class="skinny wrapper_padding" id="post_show_content">
